src/test/ui/traits/trait-alias/trait-alias-object-fail.stderr
error[E0038]: the trait `Eq` cannot be made into an object
  --> $DIR/trait-alias-object-fail.rs:7:13
   |
LL |     let _: &dyn EqAlias = &123;
   |             ^^^^^^^^^^^ `Eq` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $SRC_DIR/core/src/cmp.rs:LL:COL
   |
LL | pub trait Eq: PartialEq<Self> {
   |               ^^^^^^^^^^^^^^^ the trait cannot be made into an object because it uses `Self` as a type parameter

error[E0191]: the value of the associated type `Item` (from trait `Iterator`) must be specified
  --> $DIR/trait-alias-object-fail.rs:9:17
   |
LL |     let _: &dyn IteratorAlias = &vec![123].into_iter();
   |                 ^^^^^^^^^^^^^ help: specify the associated type: `IteratorAlias<Item = Type>`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0038, E0191.
For more information about an error, try `rustc --explain E0038`.
